[gd_scene load_steps=12 format=3 uid="uid://v55df516gjo0"]

[ext_resource type="Texture2D" uid="uid://87lls4dy6gyk" path="res://Minimap/MinimapBG.png" id="1_d5esq"]
[ext_resource type="Script" path="res://Minimap/map.gd" id="1_rfkab"]
[ext_resource type="Texture2D" uid="uid://btig2m6bna3o2" path="res://Minimap/MinimapShrinkingEarth.png" id="2_p08ss"]
[ext_resource type="Texture2D" uid="uid://cdv60xi3g7fgc" path="res://Minimap/PlayerIcon.png" id="4_budve"]
[ext_resource type="Texture2D" uid="uid://dla4y5e2vnhef" path="res://Minimap/TruckIcon.png" id="5_0w6en"]
[ext_resource type="Texture2D" uid="uid://byfei5rmylxb8" path="res://Minimap/VanIcon.png" id="6_6gya0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tj670"]
texture = ExtResource("1_d5esq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p2u68"]
texture = ExtResource("2_p08ss")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7yjn5"]
texture = ExtResource("4_budve")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5is13"]
texture = ExtResource("5_0w6en")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h1vbu"]
texture = ExtResource("6_6gya0")

[node name="Minimap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1000.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rfkab")

[node name="BGMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -531.0
offset_top = -491.5
offset_right = 531.0
offset_bottom = 491.5
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="Panel" parent="BGMarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_tj670")

[node name="SEMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -450.0
offset_right = 450.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShrinkingEarth" type="Panel" parent="SEMarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_p2u68")

[node name="MIMarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 480.0
offset_right = 530.0
offset_bottom = 530.0

[node name="MinivanIcon" type="Panel" parent="MIMarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7yjn5")

[node name="TIMarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 480.0
offset_right = 650.0
offset_bottom = 530.0

[node name="TruckIcon" type="Panel" parent="TIMarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_5is13")

[node name="VIMarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 360.0
offset_top = 480.0
offset_right = 410.0
offset_bottom = 530.0

[node name="MinivanIcon" type="Panel" parent="VIMarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_h1vbu")
